[project]
name = "postflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.10.4",
    "boto3>=1.40.48",
    "django>=5.2.7",
    "django-browser-reload>=1.21.0",
    "django-environ>=0.12.0",
    "django-extensions>=4.1",
    "django-htmx>=1.26.0",
    "django-jsonfield>=1.4.1",
    "django-storages>=1.14.6",
    "django-tailwind>=4.2.0",
    "environ>=1.0",
    "mastodon-py>=2.1.4",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "stripe>=13.0.1",
    "uwsgi>=2.0.30",
    "whitenoise>=6.11.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-django>=4.7.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "responses>=0.24.0",
]
