[project]
name = "postflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "boto3>=1.43.4",
    "django>=6.0.5",
    "django-tasks>=0.12.0",
    "django-browser-reload>=1.21.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-htmx>=1.27.0",
    "django-jsonfield>=1.4.1",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.2",
    "environ>=1.0",
    "mastodon-py>=2.2.1",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pytz>=2026.2",
    "requests>=2.33.1",
    "stripe>=15.1.0",
    "uwsgi>=2.0.31",
    "whitenoise>=6.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-mock>=3.15.0",
    "pytest-cov>=7.1.0",
    "responses>=0.26.0",
]
